# email-mcp

./: .gitignore  .pre-commit-config.yaml  ASSESSMENT.md  CHANGELOG.md  CURSOR_SETUP.md  Cargo.toml  README.md  build.ps1  build_mcpb.bat  build_mcpb.py  copy_server.py  cursor-config-template.json  email-mcp.mcpb  extension.toml  glama.json  llms-full.txt  llms.txt  manifest.json  mcpb.json  minimail-mcp.mcpb  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/prompts/: examples.json  system.md
examples/: README.md  api_services_example.py  local_and_webhook_example.py  smtp_imap_example.py
mcp-server/: README.md  manifest.json
mcp-server/assets/prompts/: examples.json  system.md  troubleshooting.md  user.md  workflows.md
mcp-server/assets/skills/email-compose/: SKILL.md
mcp-server/src/email_mcp/: __init__.py  ai.py  auth.py  server.py  transport.py  web.py
mcp-server/src/email_mcp/tools/: __init__.py  models.py  services.py  tools.py
monitoring/: config.py  health_check.py  metrics.py
src/: lib.rs
src/email_mcp/: __init__.py  server.py  transport.py
tests/: README.md  conftest.py  run_tests.py  test_connection.py
webapp/: index.html  package-lock.json  package.json  start.ps1  vite.config.ts
webapp/src/: App.tsx
webapp/src/common/: apps-catalog.ts
webapp/src/components/layout/: sidebar.tsx
webapp/src/pages/: chat.tsx  dashboard.tsx  help.tsx  settings.tsx  skill.tsx  tools.tsx
