[project]
name = "email-mcp"
version = "0.3.0"
description = "Multi-service email platform supporting SMTP/IMAP, SendGrid, Mailgun, Resend, local testing, and webhook integrations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.3,<3.0.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

