[project]
name = "minimail-mcp"
version = "0.3.0"
description = "Multi-service email platform supporting SMTP/IMAP, SendGrid, Mailgun, Resend, local testing, and webhook integrations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0,<4",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "httpx>=0.25.0",
    "ruff>=0.15.2",
]

[project.optional-dependencies]
anthropic = [
    "fastmcp[anthropic]",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_mcp"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

